--- a/fontend/src/stylesheet/BrowseTrainer.css
+++ b/fontend/src/stylesheet/BrowseTrainer.css
@@ -82,7 +82,7 @@ html, body {
   transition: transform calc(var(--d) * 2) var(--e);
 }
 .card:nth-child(1):before {
-  background-image: url(https://news.tcnj.edu/wp-content/uploads/sites/222/2018/01/180119MonishaPulimood0015_Adams-1200-1024x683.jpg);
+  background-image: url(https://media-exp1.licdn.com/dms/image/C4E03AQFreKcChT_QzA/profile-displayphoto-shrink_800_800/0/1631006877285?e=1651708800&v=beta&t=MHUnGFY5Dseo-b_WxskKcczoFWeYc-aM1j8gkx_7Qbg);
 }
 .card:nth-child(2):before {
   background-image: url(https://images.unsplash.com/photo-1533903345306-15d1c30952de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
