--- a/fontend/src/App.css
+++ b/fontend/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+.back2{
+  background-image:url(https://wallpaperaccess.com/download/hd-education-1426875);
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
