--- a/fontend/src/stylesheet/BrowseTrainer.css
+++ b/fontend/src/stylesheet/BrowseTrainer.css
@@ -14,10 +14,10 @@ html, body {
   height: 100%;
 }
 
-body {
+/* body {
   display: grid;
   place-items: center;
-}
+} */
 
 .page-content {
   display: grid;
