--- a/fontend/src/stylesheet/Login.css
+++ b/fontend/src/stylesheet/Login.css
@@ -6,6 +6,7 @@ body {
   padding:0;
   font-family: sans-serif;
   /* background: linear-gradient(#141e30, #243b55); */
+  background-image: url(https://c4.wallpaperflare.com/wallpaper/526/8/1002/library-interior-interior-design-books-wallpaper-preview.jpg);
 }
 
 .login-box {
