--- a/fontend/src/stylesheet/signup.css
+++ b/fontend/src/stylesheet/signup.css
@@ -135,7 +135,9 @@ body {
   height: 2px;
   background: linear-gradient(270deg, transparent, #03e9f4);
   animation: btn-anim3 1s linear infinite;
-  animation-delay: .5s
+  animation-delay: .5s;
+  padding-bottom: 35%;
+
 }
 
 @keyframes btn-anim3 {
@@ -164,4 +166,8 @@ body {
   50%,100% {
     bottom: 100%;
   }
+}
+.sing{
+  padding-bottom: 35%;
+  padding-top: 25%;
 }
