--- a/fontend/src/stylesheet/Home.css
+++ b/fontend/src/stylesheet/Home.css
@@ -199,3 +199,7 @@ body {
   /* .bg1{
     background: url(https://imageio.forbes.com/specials-images/imageserve/5d35eacaf1176b0008974b54/0x0.jpg?format=jpg&crop=4560,2565,x790,y784,safe&fit=crop);
   } */
+
+  .slider{
+    background-position: center;
+  }
