--- a/fontend/src/stylesheet/BrowseCourse.css
+++ b/fontend/src/stylesheet/BrowseCourse.css
@@ -44,7 +44,7 @@ body {
 .book-store {
   display: flex;
   flex-direction: column;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   height: 100vh;
   background-color: var(--page-bg-color);
   margin: 0 auto;
@@ -565,7 +565,7 @@ h1 {
 }
 
 .book-card-img {
-  width: 160px;
+  width: 180px;
   margin-top: -35px;
   border-radius: 2px;
   box-shadow: 0px 1px 7px 2px #c7c9d3;
