--- a/fontend/src/App.css
+++ b/fontend/src/App.css
@@ -38,3 +38,27 @@
     transform: rotate(360deg);
   }
 }
+
+body{
+  height: 100vh;
+}
+
+
+.study-room{
+  background: linear-gradient(to right, #00000043, #00000043), url(https://images.unsplash.com/photo-1585832770485-e68a5dbfad52?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8c3R1ZHklMjB0YWJsZXxlbnwwfHwwfHw%3D&w=1000&q=80);
+}
+.enrolled-course{
+  background: linear-gradient(to right, #000000af, #000000b3), url(https://images.unsplash.com/photo-1585832770485-e68a5dbfad52?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8c3R1ZHklMjB0YWJsZXxlbnwwfHwwfHw%3D&w=1000&q=80);
+  height: 100%;
+  padding-top: 2rem;
+}
+
+.student-login{
+  background: url(https://static.vecteezy.com/system/resources/previews/002/529/422/non_2x/top-view-office-table-desk-and-workspace-with-blank-on-white-background-free-photo.jpg);
+  background-size: cover;
+}
+.trainer-login{
+  background: url(https://images.unsplash.com/photo-1518655048521-f130df041f66?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fHRhYmxlJTIwYmFja2dyb3VuZHxlbnwwfHwwfHw%3D&w=1000&q=80);
+  background-size: cover;
+}
+
